<resources>
    <!--App Common-->
    <string name="app_name">shinrojp_android</string>
    <string name="image_description" />
    <string name="sample_email">namnt@newwave.vn</string>
    <string name="dialog_exit_app_title">Are you sure you want to exit ?</string>
    <string name="dialog_exit_app_positive_button">Yes</string>
    <string name="dialog_exit_app_negative_button">No</string>

    <!--AboutFragment-->
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="about_description">Welcome to use our ShinroJP</string>

    <!--FeedbackFragment-->
    <string name="feedback_title">Rate for us !</string>
    <string name="feedback_zero_start">Can you tell me more description about your experimental !</string>
    <string name="feedback_one_start">That not what we expected !</string>
    <string name="feedback_two_start">Hm... is anything wrong, tell us !</string>
    <string name="feedback_three_start">It\'s good new</string>
    <string name="feedback_four_start">It\'s awesome</string>
    <string name="feedback_five_start">Thank you ! We looking forward to improve our production .</string>
    <string name="feedback_subject">Thank you for your co-operation </string>
    <string name="feedback_content">If there anything troubles when using our app, we are here to help you .</string>
    <string name="feedback_dialog_title">Do you want to share us some opinions ?</string>
    <string name="feedback_dialog_message">Just take some few minutes and tell us you experiences .</string>
    <string name="feedback_dialog_positive_button">Yes, I\'m in</string>
    <string name="feedback_dialog_neutral_button">Let me think !</string>
    <string name="feedback_dialog_negative_button">No</string>

    <!--QuizFragment-->
    <string name="quiz_title">Join a game</string>
    <string name="quiz_bar_title">Quiz</string>
    <string name="quiz_edt_code">Your invite code</string>
    <string name="quiz_btn_join">Join</string>

    <!--HomeActivity-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="bottom_nav_menu_feed">Feed</string>
    <string name="bottom_nav_menu_learn">Learn</string>
    <string name="bottom_nav_menu_quiz">Quiz</string>
    <string name="drawer_nav_menu_sub_title">Communication</string>
    <string name="drawer_nav_menu_sign_out">Sign out</string>
    <string name="drawer_nav_menu_feedback">Feedback</string>
    <string name="drawer_nav_menu_about">About</string>
    <string name="drawer_nav_menu_note">Your Keep</string>

    <!--IntroActivity-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title"></string>
    <string name="slide_1_desc"></string>

    <string name="slide_2_title"></string>
    <string name="slide_2_desc"></string>

    <string name="slide_3_title"></string>
    <string name="slide_3_desc"></string>

    <string name="slide_4_title"></string>
    <string name="slide_4_desc"></string>

    <string name="play_again_desc"></string>
    <string name="play_again"></string>

    <!--AuthActivity-->
    <string name="auth_tv_slogan">Slogan</string>
    <string name="auth_tv_login">Sign In</string>
    <string name="auth_tv_register">Sign Up</string>
    <string name="auth_edt_password">Password</string>
    <string name="auth_re_edt_password">RePassword</string>
    <string name="auth_edt_username">Username</string>
    <string name="auth_edt_email">Email</string>
    <!--GameActivity-->
    <string name="tab_text_1">Goi</string>
    <string name="tab_text_2">Kanji</string>
    <string name="tab_text_3">Bunpou</string>
    <string name="quiz_btn_seach">Search</string>
    <string name="quiz_btn_play">Play</string>
    <string name="quiz_btn_creat">Creat</string>
    <string name="bottom_nav_menu_trending">Trending</string>
    <string name="bottom_nav_menu_setting">Setting</string>

</resources>
