<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_feed"
        android:icon="@drawable/ic_home_feed"
        android:title="@string/bottom_nav_menu_feed"/>
    <item
        android:id="@+id/bottom_nav_trending"
        android:icon="@drawable/ic_home_feedback"
        android:title="@string/bottom_nav_menu_trending" />
    <item
        android:id="@+id/bottom_nav_grammar"
        android:icon="@drawable/ic_home_learn"
        android:title="@string/bottom_nav_menu_learn"/>
    <item
        android:id="@+id/bottom_nav_quiz"
        android:icon="@drawable/ic_home_quiz"
        android:title="@string/bottom_nav_menu_quiz" />
    <item
        android:id="@+id/bottom_nav_setting"
        android:icon="@drawable/ic_home_setting"
        android:title="@string/bottom_nav_menu_setting" />
</menu>