<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/ic_auth_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_auth_back" />

            <com.shinro.shinrojp_android.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/auth_tv_register"
                android:textColor="#fff"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_auth_signup"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterOverflowTextAppearance="@style/AuthTheme.CounterTextOverFlowText"
                app:counterTextAppearance="@style/AuthTheme.CounterText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/AuthTheme.ErrorText"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/AuthTheme.HintText">

                <com.shinro.shinrojp_android.views.CustomEditText
                    android:id="@+id/edtUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_auth_user"
                    android:drawablePadding="35dp"
                    android:hint="@string/auth_edt_username"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="16dp"
                    android:textColor="@color/color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterOverflowTextAppearance="@style/AuthTheme.CounterTextOverFlowText"
                app:counterTextAppearance="@style/AuthTheme.CounterText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/AuthTheme.ErrorText"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/AuthTheme.HintText">

                <com.shinro.shinrojp_android.views.CustomEditText
                    android:id="@+id/edtEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_auth_email"
                    android:drawablePadding="35dp"
                    android:hint="@string/auth_edt_email"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:counterOverflowTextAppearance="@style/AuthTheme.CounterTextOverFlowText"
                app:counterTextAppearance="@style/AuthTheme.CounterText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/AuthTheme.ErrorText"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/AuthTheme.HintText">

                <com.shinro.shinrojp_android.views.CustomEditText
                    android:id="@+id/edtPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_auth_password"
                    android:drawablePadding="38dp"
                    android:hint="@string/auth_edt_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.shinro.shinrojp_android.views.CustomEditText
                android:id="@+id/edtRePassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:background="#0000"
                android:drawableStart="@drawable/ic_auth_password"
                android:drawablePadding="38dp"
                android:hint="@string/auth_re_edt_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/color_hint" />

        </LinearLayout>

    </LinearLayout>

    <com.shinro.shinrojp_android.views.CustomTextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_auth_rect"
        android:text="@string/auth_tv_register"
        android:textSize="20sp"
        android:textColor="#9e3d41"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:padding="13dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"/>

</RelativeLayout>
